# Arcanium

./: .gitignore  CHANGELOG.md  LICENSE  LOOP.md  README.md  WORKFLOW.md  install.sh
components/: README.md
components/auth/: ANTIPATTERNS.md  PATTERNS.md
components/concurrency/: ANTIPATTERNS.md  PATTERNS.md
components/db/: ANTIPATTERNS.md  PATTERNS.md
engineering/: boring-tech.md  component-library.md  defensive-defaults.md  disable-flag-both-paths.md  implementer-handoff.md  preserve-existing.md
lifecycle/: persist-load-bearing-findings.md  retrospective.md  skill-audit.md
process/: compact-or-clear.md  split-run-implementation.md
quality/: adversarial-review.md  good-enough-rubric.md  non-negotiable-paths.md  security-review.md
retrospectives/: .gitignore  2026-06-airbnb-llm-chat.md  2026-06-cortex-phase1-pm-checklist.md  2026-06-cortex.md  2026-06-llm-gateway.md  README.md
starter/: .gitignore  CLAUDE.md  README.md  pyproject.toml
starter/.claude/agents/: fixer.md
starter/agents/planner/: README.md  plan-template.md  pm-checklist.md
starter/agents/reviewer/: README.md  review-template.md
starter/spec/: spec.md
starter/src/: README.md
starter/tests/: conftest.py
templates/: CLAUDE.md.example  friction.md.example  retrospective.md.example  spec.md.example  system-prompt-implementer.md  system-prompt-reviewer.md
workflow/: agent-journal.md  decision-log.md  feasibility-first.md  gate-first-validation.md  model-fusion.md  model-routing.md  pm-checklist.md  retrospective.md  rigor-triage.md  scope-cut-list.md  spec-coach.md  spec-first.md
(+6 files in other folders)
